syntax = "proto2";
package transit_realtime;

option java_package = "com.example.vehicletracker.proto";
option java_outer_classname = "GtfsRealtime";

// The contents below are based on the GTFS-RT standard but simplified for our needs
// See full spec at: https://developers.google.com/transit/gtfs-realtime/reference

message FeedMessage {
  required FeedHeader header = 1;
  repeated FeedEntity entity = 2;
}

message FeedHeader {
  required string version = 1;
  optional uint64 timestamp = 2;
  optional uint64 incrementality = 3;
}

message FeedEntity {
  required string id = 1;
  optional bool is_deleted = 2 [default = false];
  optional VehiclePosition vehicle = 3;
}

message VehiclePosition {
  optional TripDescriptor trip = 1;
  optional VehicleDescriptor vehicle = 2;
  optional Position position = 3;
  optional uint32 current_stop_sequence = 4;
  optional string current_status = 5;
  optional uint64 timestamp = 6;
}

message TripDescriptor {
  optional string trip_id = 1;
  optional string route_id = 2;
  optional string direction_id = 3;
  optional string start_time = 4;
  optional string start_date = 5;
  optional string schedule_relationship = 6;
}

message VehicleDescriptor {
  optional string id = 1;
  optional string label = 2;
  optional string license_plate = 3;
}

message Position {
  required float latitude = 1;
  required float longitude = 2;
  optional float bearing = 3;
  optional double odometer = 4;
  optional float speed = 5;
}
